--- a/stylesheet/global.css
+++ b/stylesheet/global.css
@@ -1,14 +1,12 @@
-p {
-	font-size: 50px;
-	color: yellow;
-}
-
 body {
   margin: 10px;
   font: 84% Arial, sans-serif
 }
 
-h1 { font-size: 156% }
+p {
+  font-size: 10px;
+  color: black;
+}
 
 h1 img {
   margin: 1px 5px 0 1px;
